cmake_minimum_required(VERSION 3.1.0)

set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -fomit-frame-pointer -DNDEBUG -I src/dragonbox/include")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -fomit-frame-pointer -DNDEBUG -I src/dragonbox/include")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -march=native -g -fomit-frame-pointer -DNDEBUG -I src/dragonbox/include")
set(CMAKE_C_FLAGS_MINSIZEREL "-Os -fomit-frame-pointer -DNDEBUG -I src/dragonbox/include")
set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native -fomit-frame-pointer -DNDEBUG -I src/dragonbox/include")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -march=native -fomit-frame-pointer -g -DNDEBUG -I src/dragonbox/include")


# Joins arguments and places the results in ${result_var}.
function(join result_var)
  set(result )
  foreach (arg ${ARGN})
    set(result "${result}${arg}")
  endforeach ()
  set(${result_var} "${result}" PARENT_SCOPE)
endfunction()

if (NOT CMAKE_BUILD_TYPE)
  join(doc "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or "
           "CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
  set(CMAKE_BUILD_TYPE Release CACHE STRING ${doc})
endif ()

project(DTOA_BENCHMARK C CXX)

set(CMAKE_CXX_STANDARD 17)

add_executable(
  dtoa-benchmark
  src/main.cpp
  # Tests:
  src/ryutest.cpp
  src/serial_fp_convert.cpp
  src/dragonbox.cpp
  src/doubleconvtest.cpp
  src/fmttest.cpp
  src/fpconvtest.cpp
  src/gaytest.cpp
  src/grisu2btest.cpp
  src/milotest.cpp
  src/null.cpp
  src/ostringstream.cpp
  src/ostrstream.cpp
  src/sprintf.cpp
  # Libraries:
  src/dragonbox/source/dragonbox_to_chars.cpp
  src/fpconv/fpconv.c
  src/serial/util/fp_convert.cc
  src/gay/dtoa.c
  src/gay/g_fmt.c
  src/grisu/grisu2b_59_56.c
  src/double-conversion/bignum-dtoa.cc
  src/double-conversion/bignum.cc
  src/double-conversion/cached-powers.cc
  src/double-conversion/diy-fp.cc
  src/double-conversion/double-conversion.cc
  src/double-conversion/fast-dtoa.cc
  src/double-conversion/fixed-dtoa.cc
  src/double-conversion/strtod.cc)
target_include_directories(dtoa-benchmark PRIVATE src)
